THRIFT-4225: Delete callback if RPC send failed